# WeatherServer

./: CHANGELOG.md  LICENSE  README.md  WeatherServer.cabal  config.yaml
app/: Main.hs
src/: Config.hs  Weather.hs
src/Server/: Receivers.hs  Utils.hs
src/Weather/: Type.hs
src/Weather/Types/: Clouds.hs  Coord.hs  Main.hs  Sys.hs  Weather.hs  Wind.hs
